Fix error in puma.sh

--- a/templates/puma/puma.sh.erb
+++ b/templates/puma/puma.sh.erb
@@ -4,7 +4,7 @@
 # Managed by puppet
 
 # load ruby environment manager RBENV
-if [ -d $HOME/.rvm ]; then
+if [ -d $HOME/.rbenv ]; then
     export PATH="$HOME/.rbenv/bin:$PATH"
     eval "$(rbenv init -)"
 else
